package com.goranotes.mymovies.model

import com.goranotes.mymovies.R

object FakeMovieListDataSource {
    val dummyMovieList = listOf(
        MovieList(
            1,
            R.drawable.movie_1,
            "Godzilla x Kong: The New Empire",
            6.5,
            "Two ancient titans, Godzilla and Kong, clash in an epic battle as humans unravel their intertwined origins and connection to Skull Island's mysteries.",
            "Adam Wingard",
...
